--- a/res/drawable-hdpi/selector_lu_up.xml
+++ b/res/drawable-hdpi/selector_lu_up.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <corners
-        android:radius="6dp"/>
     <solid
-        android:color="@color/white"/>
-    <stroke android:width="1dp"
-        android:color="@color/main_yellow"/>
-
+        android:color="#E9F83C"/>
 </shape>
