--- a/res/layout/friends.xml
+++ b/res/layout/friends.xml
@@ -3,26 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/et_bg"
-        android:hint="搜索"
-        android:gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
-    <View 
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#000000"
-        android:layout_margin="2dp"/>
+    <!--好友界面  -->
     <ExpandableListView
         android:id="@+id/expand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="5dp"
+        android:layout_marginTop="17dp"
         android:groupIndicator="@null" >
     </ExpandableListView>
 
