--- a/res/layout/lu.xml
+++ b/res/layout/lu.xml
@@ -2,65 +2,88 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f2f4f5"
     android:orientation="vertical" >
-
+    <!-- 消息好友界面 -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" >
+        android:layout_height="50dp"
+        android:background="#343434" >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/rub_course_back_icon" />
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/yo_hey_head_portrait" />
 
-        <RadioGroup
-            android:id="@+id/radiogroup"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal" >
-
-            <RadioButton
-                android:id="@+id/rb_msg"
-                android:layout_width="0dp"
+            <RadioGroup
+                android:id="@+id/radiogroup"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/selector_lu"
-                android:button="@null"
-                android:gravity="center"
-                android:text="消息"
-                android:textColor="@drawable/selector_textcolor" />
+                android:orientation="horizontal" 
+                android:layout_centerInParent="true"
+                android:padding="2dp"
+                android:background="@drawable/friend_message_shape">
 
-            <RadioButton
-                android:id="@+id/rb_friends"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/selector_lu"
-                android:button="@null"
-                android:gravity="center"
-                android:text="好友"
-                android:textColor="@drawable/selector_textcolor" />
-        </RadioGroup>
+                <RadioButton
+                    android:id="@+id/rb_msg"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/selector_lu"
+                    android:button="@null"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="消息"
+                    android:textColor="@drawable/selector_textcolor" />
+
+                <RadioButton
+                    android:id="@+id/rb_friends"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/selector_lu"
+                    android:button="@null"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="好友"
+                    android:textColor="@drawable/selector_textcolor" />
+            </RadioGroup>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:text="添加" />
+            android:layout_marginRight="14dp"
+            android:layout_marginEnd="14dp"
+            android:text="添加" 
+            android:textColor="#ffffff"
+            android:textSize="18sp"/>
     </RelativeLayout>
-
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/et_bg"
+        android:hint="搜索"
+        android:cursorVisible="false"
+        android:gravity="center"
+        android:layout_marginTop="7dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginRight="11dp"/>
     <LinearLayout
         android:id="@+id/linearlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
     </LinearLayout>
 
