--- a/res/layout/actvity_yue_lu_personal_post.xml
+++ b/res/layout/actvity_yue_lu_personal_post.xml
@@ -2,182 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
+    android:background="@color/write"
     android:orientation="vertical" >
 
     <include
         android:id="@+id/personal_post_include_title"
         layout="@layout/title_navigation_bar" />
 
-    <View
+    <ListView
+        android:id="@+id/personal_post_list_message"
         android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:background="@color/thread_gray" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:divider="@null"
+        android:dividerHeight="20dp"
+       />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:orientation="horizontal"
-        android:paddingBottom="3dp" >
-
-        <!-- 头像 -->
-
-        <ImageView
-            android:id="@+id/personal_post_image_head"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:contentDescription="@drawable/ic_launcher"
-            android:src="@drawable/tui_jian_kai_hei_1" />
-
-        <!-- 昵称 -->
-
-        <TextView
-            android:id="@+id/personal_post_nick_text_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_toEndOf="@id/personal_post_image_head"
-            android:layout_toRightOf="@+id/personal_post_image_head"
-            android:text="@string/zhao"
-            android:textSize="14sp" />
-
-        <!-- 时间 -->
-
-        <TextView
-            android:id="@+id/personal_post_text_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/personal_post_nick_text_name"
-            android:layout_alignStart="@id/personal_post_nick_text_name"
-            android:layout_below="@id/personal_post_nick_text_name"
-            android:paddingTop="3dp"
-            android:text="18:55"
-            android:textSize="11sp" />
-
-        <!-- 添加按钮 -->
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
-            android:contentDescription="@drawable/tian_jia_an_niu"
-            android:src="@drawable/tian_jia_an_niu" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="0.5px"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:background="@color/line" />
-    <!-- 发表内容 -->
-
-    <LinearLayout
-        android:id="@+id/personal_post_cotext"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp" >
-    </LinearLayout>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:background="@color/thread_gray" />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="35.3dp"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp" >
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-        <!-- 添加 -->
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@drawable/main_jia_ru_zhan_dui"
-            android:src="@drawable/main_jia_ru_zhan_dui" />
-
-        <TextView
-            android:id="@+id/personal_post_text_addd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="1" />
-
-        <!-- 留言图标 -->
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@drawable/iconfont_xinxi"
-            android:src="@drawable/iconfont_xinxi" />
-
-        <TextView
-            android:id="@+id/personal_post_text_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:text="1" />
-        <!-- 点赞图标 -->
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@drawable/iconfont_dianzan"
-            android:src="@drawable/iconfont_dianzan" />
-
-        <TextView
-            android:id="@+id/personal_post_text_zhan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:text="1" />
-    </LinearLayout>
+    <!-- 说一句 -->
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/text_stroke"
         android:orientation="horizontal" >
 
-        <!-- 说一句 -->
-
-        <ListView
-            android:id="@+id/personal_post_list_message"
+        <EditText
+            android:id="@+id/personal_post_edit_say"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/text_stroke"
+            android:hint="@string/say"
+            android:padding="5dp"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </LinearLayout>
