--- a/res/layout/fragment_text.xml
+++ b/res/layout/fragment_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -7,43 +7,38 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/layou_main"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:orientation="vertical" >
     </android.support.v4.view.ViewPager>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/fragment_text_post_share"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/fragment_main_selection_bar"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
         android:visibility="gone" >
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/fragment_text_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal" >
+            android:contentDescription="@drawable/ic_launcher"
+            android:src="@drawable/ic_launcher" />
 
-            <ImageView
-                android:id="@+id/fragment_text_post"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@drawable/ic_launcher"
-                android:src="@drawable/ic_launcher" />
-
-            <ImageView
-                android:id="@+id/fragment_text_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:contentDescription="@drawable/ic_launcher"
-                android:src="@drawable/ic_launcher" />
-        </LinearLayout>
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/fragment_text_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:contentDescription="@drawable/ic_launcher"
+            android:src="@drawable/ic_launcher" />
+    </LinearLayout>
 
     <include
         android:id="@+id/fragment_main_selection_bar"
         layout="@layout/bottom_of_the_selection_bar" />
 
-</LinearLayout>
+</RelativeLayout>
