--- a/res/layout/friends.xml
+++ b/res/layout/friends.xml
@@ -7,7 +7,7 @@
     <ExpandableListView
         android:id="@+id/expand"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:divider="@null"
         android:dividerHeight="5dp"
         android:layout_marginTop="17dp"
