--- a/res/drawable/friend_message_shape.xml
+++ b/res/drawable/friend_message_shape.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- 圆角 -->
-    <corners android:radius="5sp"/>
+    <corners android:radius="5dp"/>
     <!-- 线条 -->
-    <stroke android:width="1sp" android:color="#E9F83C"/>
+    <stroke android:width="1px"/>
     <!-- 背景 -->
     <solid android:color="#E9F83C"/>
 
