--- a/res/layout/child.xml
+++ b/res/layout/child.xml
@@ -2,51 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="horizontal" >
 
     <ImageView
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:src="@drawable/icon" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginStart="21dp"
+        android:src="@drawable/yo_hey_head_portrait"
+        android:contentDescription="@drawable/yo_hey_head_portrait"/>
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_weight="4" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_childname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:padding="2dp"
-            android:text="赵日天" />
-
-        <TextView
-            android:id="@+id/tv_sign"
-            android:layout_width="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginStart="22dp"
+            android:text="赵日天"
+            android:textColor="#343434"
+            android:textSize="15sp"/>
+        <LinearLayout 
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:padding="2dp"
-            android:text="每把超神服不服" />
+            android:orientation="horizontal">
+            <TextView
+               android:id="@+id/tv_sign"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="1"
+               android:layout_marginLeft="22dp"
+               android:layout_marginStart="22dp"
+               android:text="每把超神服不服"
+               android:textColor="#888888"
+               android:textSize="13sp" />
 
-        <TextView
-            android:id="@+id/tv_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:text="在线" />
+           <TextView
+               android:id="@+id/tv_status"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginRight="21dp"
+               android:layout_marginEnd="21dp"
+               android:text="游戏在线"
+               android:textColor="#888888"
+               android:textSize="13sp"  />
+        </LinearLayout> 
         <View 
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="#000000"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
+            android:background="#DADBDD"
+            android:layout_marginTop="10dp"/>
+    </LinearLayout>
 
 </LinearLayout>
