--- a/res/layout/group.xml
+++ b/res/layout/group.xml
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp" >
+    android:layout_height="match_parent"
+    android:layout_marginBottom="10dp"
+    android:orientation="horizontal" >
 
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:background="@drawable/rub_course_descending_order_non_sel" />
+        android:layout_marginLeft="21dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@drawable/yo_hey_dwon_triangle"/>
 
     <TextView
         android:id="@+id/tv_groupname"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:text="约黑好友"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        android:textColor="#343434" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_onlinenum"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:gravity="center"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="150dp"
+        android:layout_marginStart="150dp"
+        android:text="20" 
+        android:textSize="14sp"
+        android:textColor="#343434"/>
 
-        <TextView
-            android:id="@+id/tv_onlinenum"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="20" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="/" 
+        android:textSize="14sp"
+        android:textColor="#343434"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="/" />
+    <TextView
+        android:id="@+id/tv_total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="21" 
+        android:textSize="14sp"
+        android:textColor="#343434"/>
 
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="21" />
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
