--- a/res/layout/message_listview.xml
+++ b/res/layout/message_listview.xml
@@ -2,82 +2,77 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="horizontal" >
 
     <ImageView
         android:id="@+id/tv_image"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
-        android:layout_weight="1"
-        android:contentDescription="@drawable/icon"
-        android:gravity="center"
-        android:src="@drawable/icon" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginStart="21dp"
+        android:contentDescription="@drawable/yo_hey_head_portrait"
+        android:src="@drawable/yo_hey_head_portrait" />
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_weight="4" >
-
-        <TextView
-            android:id="@+id/tv_childname"
-            android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout 
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:padding="2dp"
-            android:text="赵日天" />
-
-        <TextView
-            android:id="@+id/tv_sign"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:padding="2dp"
-            android:text="玩得好开心" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:gravity="center"
-            android:orientation="vertical" >
-
+            android:orientation="horizontal">
+            <TextView
+               android:id="@+id/tv_childname"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="1"
+               android:layout_marginLeft="21dp"
+               android:layout_marginStart="21dp"
+               android:text="赵日天"
+               android:textSize="14sp"
+               android:textColor="#343434"/>
             <TextView
                 android:id="@+id/tv_status"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingRight="5dp"
-                android:text="20:08" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:paddingRight="5dp" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/red_pointer"
-                    android:gravity="center"
-                    android:text="1"
-                    android:textColor="@color/white"
-                    android:textSize="10sp" />
-            </RelativeLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
+                android:text="20:08"
+                android:textColor="#888888"
+                android:textSize="14sp"/>
+        </LinearLayout>
+        <LinearLayout 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+               android:id="@+id/tv_sign"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_weight="1"
+               android:layout_marginLeft="21dp"
+               android:layout_marginStart="21dp"
+               android:text="玩得好开心"
+               android:textColor="#888888"
+               android:textSize="12sp"/>
+            <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:background="@drawable/red_pointer"
+                 android:layout_marginRight="20dp"
+                 android:layout_marginEnd="20dp"
+                 android:gravity="center"
+                 android:text="1"
+                 android:textColor="@color/white"
+                 android:textSize="10sp" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_alignParentBottom="true"
-            android:background="#000000" />
-    </RelativeLayout>
+            android:background="#DADBDD"
+            android:layout_marginTop="10dp" />
+    </LinearLayout>
 
 </LinearLayout>
